fixes for styling on smaller devices

--- a/src/pages/media-collection/media-collection.scss
+++ b/src/pages/media-collection/media-collection.scss
@@ -53,9 +53,17 @@ page-media-collection {
     .filters{
         display: flex;
         flex-direction: row;
-        width: 50%;
+        width: 60%;
+        padding-left: 1.5rem;
     }
-    @media only screen and (max-width: 600px) {
+
+    @media only screen and (max-width: 1024px) {
+      .filters{
+          width: 100%;
+      }
+  }
+
+    @media only screen and (max-width: 800px) {
       .filters{
           display: flex;
           flex-direction: column;
@@ -81,5 +89,8 @@ page-media-collection {
     }
     img{
         cursor: pointer;
+    }
+    .info{
+      padding-left: 1.5rem;
     }
 }
